--- a/app/styles/addons/ember-calendar/components/as-calendar/_timetable.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/_timetable.scss
@@ -1,6 +1,26 @@
 .as-calendar-timetable {
-  > .content {
+  .header.columns, > .content-wrapper {
     @extend %grid-row;
+  }
+
+  .header.rows, .time-zone {
+    @extend %grid-column-1;
+  }
+
+  .day-labels, > .content-wrapper > .content {
+    @extend %grid-column-11;
+  }
+
+  .header.rows, .time-zone, .day-labels, > .content-wrapper > .content {
+    &, &:last-child {
+      padding: 0;
+    }
+  }
+
+  .time-slot-labels > ul > li,
+  .as-calendar-time-zone-select,
+  .day-labels > ul > li {
+    padding: $column-gutter / 4 0;
   }
 
   .header {
@@ -14,41 +34,11 @@
 
     &.columns {
       background-color: lighten($global-section-border-color, 3%);
-
-      > ul > li {
-        @extend %grid-row;
-
-        border-bottom: 1px solid darken($global-section-border-color, 5%);
-
-        &:last-child {
-          border-bottom: 0;
-        }
-      }
-    }
-
-    &.rows {
-      @extend %grid-column-1;
-
-      padding: 0;
+      border-bottom: 1px solid darken($global-section-border-color, 5%);
     }
   }
 
-  .time-zone {
-    @extend %grid-column-1;
-
-    padding: 0;
-  }
-
-  .day-labels,
-  .grid {
-    @extend %grid-column-11;
-
-    &, &:last-child {
-      padding: 0;
-    }
-  }
-
-  .grid > div {
+  > .content-wrapper > .content > div {
     position: relative;
   }
 
@@ -63,15 +53,16 @@
   }
 
   .days, .time-slots {
-    bottom: 0;
+    height: 100%;
     left: 0;
     position: absolute;
-    right: 0;
     top: 0;
+    width: 100%;
   }
 
   .days > li {
     border-right: 1px solid $global-section-border-color;
+    height: 100%;
     position: relative;
   }
 
@@ -92,11 +83,5 @@
 
   .time-slot-labels li:first-child {
     color: transparent;
-  }
-
-  .time-slot-labels > ul > li,
-  .as-calendar-time-zone-select,
-  .day-labels > ul > li {
-    padding: $column-gutter / 4 0;
   }
 }
