--- a/app/templates/components/as-calendar/time-zone-select.hbs
+++ b/app/templates/components/as-calendar/time-zone-select.hbs
@@ -23,7 +23,7 @@
                 option=option
                 select=this
                 selectedOption=selectedOption
-                onSelect="onSelectOption"}}
+                onSelect="selectOption"}}
             </li>
           {{/each}}
         </ul>
