--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -4,5 +4,4 @@
   dayStartingTime="9:00"
   dayEndingTime="18:00"
   timeSlotDuration="00:30"
-  onAddOccurrence="onCalendarAddOccurrence"
-  onRemoveOccurrence="onCalendarRemoveOccurrence"}}
+  onAddOccurrence="calendarAddOccurrence"}}
