Separate timetable in a content subcomponent

--- a/app/templates/components/as-calendar.hbs
+++ b/app/templates/components/as-calendar.hbs
@@ -17,7 +17,7 @@
         {{as-calendar/occurrence
           model=occurrence
           timeSlotHeight=timeSlotHeight
-          timeSlotDuration=model.timeSlotDuration}}
+          timeSlotDuration=modelTimeSlotDuration}}
       </li>
     {{/each}}
   </ul>
