--- a/app/templates/components/as-calendar/timetable.hbs
+++ b/app/templates/components/as-calendar/timetable.hbs
@@ -27,22 +27,11 @@
   </div>
 
   <div class="content">
-    <div style={{contentStyle}}>
-      <ul class="time-slots">
-        {{#each timeSlots as |timeSlot|}}
-          <li style={{timeSlotStyle}}></li>
-        {{/each}}
-      </ul>
-
-      <ul class="days">
-        {{#each days as |day|}}
-          <li>
-            {{#if hasBlock}}
-              {{yield day this}}
-            {{/if}}
-          </li>
-        {{/each}}
-      </ul>
-    </div>
+    {{#as-calendar/timetable/content
+      timeSlotHeight=timeSlotHeight
+      model=model
+      onSelectTime="selectTime" as |day|}}
+      {{yield day this}}
+    {{/as-calendar/timetable/content}}
   </div>
 </div>
