--- a/app/templates/components/as-calendar/occurrence.hbs
+++ b/app/templates/components/as-calendar/occurrence.hbs
@@ -1,1 +1,4 @@
-<h1 style={{titleStyle}}>{{title}}</h1>
+<div>
+  <h1 style={{titleStyle}}>{{title}}</h1>
+  <div class="resize-handle"></div>
+</div>
