Remove one way binding
App was breaking

--- a/app/templates/components/as-calendar.hbs
+++ b/app/templates/components/as-calendar.hbs
@@ -18,7 +18,7 @@
           model=occurrence
           timeSlotHeight=timeSlotHeight
           timeSlotWidth=content.timeSlotWidth
-          referenceElement=content.referenceElement
+          referenceElement=content.element
           timeSlotDuration=modelTimeSlotDuration
           onUpdateOccurrence="updateOccurrence"}}
       </li>
@@ -30,7 +30,7 @@
           model=day.occurrencePreview
           timeSlotHeight=timeSlotHeight
           timeSlotWidth=content.timeSlotWidth
-          referenceElement=content.referenceElement
+          referenceElement=content.element
           timeSlotDuration=modelTimeSlotDuration
           onUpdateOccurrence="updateOccurrence"}}
       </li>
