--- a/app/templates/components/as-calendar.hbs
+++ b/app/templates/components/as-calendar.hbs
@@ -17,7 +17,7 @@
         {{as-calendar/occurrence
           model=occurrence
           timeSlotHeight=timeSlotHeight
-          timeSlotWidth=content.timeSlotWidth
+          dayWidth=content.dayWidth
           referenceElement=content.element
           timeSlotDuration=modelTimeSlotDuration
           onUpdateOccurrence="updateOccurrence"}}
@@ -29,7 +29,7 @@
         {{as-calendar/occurrence
           model=day.occurrencePreview
           timeSlotHeight=timeSlotHeight
-          timeSlotWidth=content.timeSlotWidth
+          dayWidth=content.dayWidth
           referenceElement=content.element
           timeSlotDuration=modelTimeSlotDuration
           onUpdateOccurrence="updateOccurrence"}}
