--- a/app/templates/components/as-calendar.hbs
+++ b/app/templates/components/as-calendar.hbs
@@ -10,15 +10,14 @@
   timeSlotHeight=timeSlotHeight
   defaultTimeZoneRegexp=defaultTimeZoneRegexp
   onSelectTime="addOccurrence"
-  onChangeTimeZone="changeTimeZone" as |day content|}}
+  onChangeTimeZone="changeTimeZone" as |day timetable|}}
   <ul class="occurrences">
     {{#each day.occurrences as |occurrence|}}
       <li>
         {{as-calendar/occurrence
           model=occurrence
           timeSlotHeight=timeSlotHeight
-          dayWidth=content.dayWidth
-          referenceElement=content.element
+          timetable=timetable
           timeSlotDuration=modelTimeSlotDuration
           onUpdateOccurrence="updateOccurrence"}}
       </li>
@@ -29,8 +28,7 @@
         {{as-calendar/occurrence
           model=day.occurrencePreview
           timeSlotHeight=timeSlotHeight
-          dayWidth=content.dayWidth
-          referenceElement=content.element
+          timetable=timetable
           timeSlotDuration=modelTimeSlotDuration
           onUpdateOccurrence="updateOccurrence"}}
       </li>
