--- a/app/styles/addons/ember-calendar/components/as-calendar/_time-zone-select.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/_time-zone-select.scss
@@ -17,14 +17,10 @@
   }
 
   .rl-dropdown {
-    &:before {
-      @include dropdown-triangle(12px, $white, 'bottom');
-    }
-
     background-clip: padding-box;
     background-color: $dropdown-background-color;
-    border-radius: $global-radius / 2;
     border: 1px solid $dropdown-border-color;
+    border-radius: $global-radius / 2;
     box-shadow: 0 2px 3px rgba(0, 0, 0, .175);
     display: none;
     float: left;
@@ -38,7 +34,12 @@
     top: 100%;
     z-index: $dropdown-z-index;
 
-    .search, .results {
+    &:before {
+      @include dropdown-triangle(12px, $white, 'bottom');
+    }
+
+    .search,
+    .results {
       @extend %dropdown-item;
     }
 
