--- a/app/styles/addons/ember-calendar/components/as-calendar/_timetable.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/_timetable.scss
@@ -1,18 +1,25 @@
 .as-calendar-timetable {
-  .header.columns, > .content-wrapper {
+  .header.columns,
+  > .content-wrapper {
     @extend %grid-row;
   }
 
-  .header.rows, .time-zone {
+  .header.rows,
+  .time-zone {
     @extend %grid-column-1;
   }
 
-  .day-labels, > .content-wrapper > .content {
+  .day-labels,
+  > .content-wrapper > .content {
     @extend %grid-column-11;
   }
 
-  .header.rows, .time-zone, .day-labels, > .content-wrapper > .content {
-    &, &:last-child {
+  .header.rows,
+  .time-zone,
+  .day-labels,
+  > .content-wrapper > .content {
+    &,
+    &:last-child {
       padding: 0;
     }
   }
@@ -52,7 +59,8 @@
     }
   }
 
-  .days, .time-slots {
+  .days,
+  .time-slots {
     height: 100%;
     left: 0;
     position: absolute;
