--- a/app/styles/addons/ember-calendar/main.scss
+++ b/app/styles/addons/ember-calendar/main.scss
@@ -6,3 +6,4 @@
 @import 'components/as-calendar/time-zone-option';
 @import 'components/as-calendar/time-zone-select';
 @import 'components/as-calendar/timetable';
+@import 'components/as-calendar/timetable/occurrence';
