--- a/app/templates/components/as-calendar.hbs
+++ b/app/templates/components/as-calendar.hbs
@@ -19,7 +19,7 @@
           timeSlotHeight=timeSlotHeight
           timetable=timetable
           timeSlotDuration=modelTimeSlotDuration
-          onUpdateOccurrence="updateOccurrence"}}
+          onUpdate="updateOccurrence"}}
       </li>
     {{/each}}
 
