Delete all the occurrences yay

--- a/app/templates/components/as-calendar.hbs
+++ b/app/templates/components/as-calendar.hbs
@@ -19,7 +19,8 @@
           timeSlotHeight=timeSlotHeight
           timetable=timetable
           timeSlotDuration=modelTimeSlotDuration
-          onUpdate="updateOccurrence"}}
+          onUpdate="updateOccurrence"
+          onRemove="removeOccurrence"}}
       </li>
     {{/each}}
 
