--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -5,4 +5,5 @@
   dayEndingTime="18:00"
   timeSlotDuration="00:30"
   onAddOccurrence="calendarAddOccurrence"
-  onUpdateOccurrence="calendarUpdateOccurrence"}}
+  onUpdateOccurrence="calendarUpdateOccurrence"
+  onRemoveOccurrence="calendarRemoveOccurrence"}}
