--- a/app/styles/addons/ember-calendar/components/as-calendar/timetable/_occurrence.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/timetable/_occurrence.scss
@@ -7,4 +7,27 @@
     position: absolute;
     right: 0;
   }
+
+  &:hover {
+    .delete {
+      opacity: 1;
+    }
+  }
+
+  .delete {
+    @include single-transition(color, 150ms);
+    @include single-transition(opacity, 150ms);
+    @include icon(times);
+
+    color: $white;
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    top: $column-gutter / 8;
+
+    &:hover {
+      background-color: transparent;
+      color: darken($alert-color, 10%);
+    }
+  }
 }
