Add transparency for preview

--- a/app/templates/components/as-calendar.hbs
+++ b/app/templates/components/as-calendar.hbs
@@ -27,6 +27,7 @@
     {{#if day.occurrencePreview}}
       <li>
         {{as-calendar/occurrence
+          class="preview"
           model=day.occurrencePreview
           timeSlotHeight=timeSlotHeight
           timeSlotDuration=modelTimeSlotDuration}}
