--- a/app/templates/components/as-calendar/timetable/occurrence.hbs
+++ b/app/templates/components/as-calendar/timetable/occurrence.hbs
@@ -1,2 +1,4 @@
-<a {{action "delete" bubbles=false}} class="delete"></a>
-<div class="resize-handle"></div>
+{{#unless isInteracting}}
+  <a {{action "delete" bubbles=false}} class="delete"></a>
+  <div class="resize-handle"></div>
+{{/unless}}
