--- a/app/templates/components/as-calendar/time-zone-select.hbs
+++ b/app/templates/components/as-calendar/time-zone-select.hbs
@@ -5,7 +5,7 @@
   {{/rl-dropdown-toggle}}
 
   {{#rl-dropdown closeOnChildClick=".results"}}
-    {{#if showResults}}
+    {{#liquid-if showResults use="crossFade" containerless=true}}
       <div class="search">
         <div class="icon"><i></i></div>
 
@@ -28,6 +28,6 @@
           {{/each}}
         </ul>
       </div>
-    {{/if}}
+    {{/liquid-if}}
   {{/rl-dropdown}}
 {{/rl-dropdown-container}}
