--- a/app/templates/components/as-calendar/timetable.hbs
+++ b/app/templates/components/as-calendar/timetable.hbs
@@ -9,7 +9,7 @@
   <div class="day-labels">
     <ul>
       {{#each days as |day|}}
-        <li>{{moment day.value "ddd D MMM"}}</li>
+        <li class={{if day.isToday "today"}}>{{moment day.value "ddd D MMM"}}</li>
       {{/each}}
     </ul>
   </div>
