Animate time zone select caret

--- a/app/styles/addons/ember-calendar/components/as-calendar/_time-zone-select.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/_time-zone-select.scss
@@ -12,6 +12,11 @@
 
     i {
       @include icon(caret-down);
+      transition: transform 200ms ease;
+
+      &.active {
+        transform: rotate(180deg);
+      }
     }
 
     span {
