--- a/app/templates/components/as-calendar.hbs
+++ b/app/templates/components/as-calendar.hbs
@@ -7,6 +7,7 @@
 {{#as-calendar/timetable
   model=model
   timeZone=timeZone
+  timeZoneOptions=timeZoneOptions
   timeSlotHeight=timeSlotHeight
   defaultTimeZoneRegexp=defaultTimeZoneRegexp
   onSelectTime="addOccurrence"
