--- a/app/templates/components/as-calendar/timetable.hbs
+++ b/app/templates/components/as-calendar/timetable.hbs
@@ -2,6 +2,7 @@
   <div class="time-zone">
     {{as-calendar/time-zone-select
       value=timeZone
+      options=timeZoneOptions
       onChangeValue="changeTimeZone"
       defaultRegexp=defaultTimeZoneRegexp}}
   </div>
