Allow to pass custom timezones to the calendar

--- a/app/templates/components/as-calendar/time-zone-select.hbs
+++ b/app/templates/components/as-calendar/time-zone-select.hbs
@@ -6,14 +6,16 @@
 
   {{#rl-dropdown closeOnChildClick=".results"}}
     {{#liquid-if showResults use="crossFade" containerless=true}}
-      <div class="search">
-        <div class="icon"><i></i></div>
+      {{#if searchEnabled}}
+        <div class="search">
+          <div class="icon"><i></i></div>
 
-        {{input type="text"
-          value=query
-          click=onSearchClick
-          placeholder="Search for more timezones"}}
-      </div>
+          {{input type="text"
+            value=query
+            click=onSearchClick
+            placeholder="Search for more timezones"}}
+        </div>
+      {{/if}}
 
       <div class="results">
         <ul>
