--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -1,6 +1,7 @@
 {{as-calendar
   title="Ember Calendar"
   occurrences=occurrences
+  defaultTimeZoneQuery="New York|London|Dubai|Hong Kong"
   dayStartingTime="9:00"
   dayEndingTime="18:00"
   timeSlotDuration="00:30"
