Make occurrence interactions optional

--- a/app/styles/addons/ember-calendar/components/_as-calendar.scss
+++ b/app/styles/addons/ember-calendar/components/_as-calendar.scss
@@ -1,5 +1,6 @@
 .as-calendar {
   background: $white;
+  border: 1px solid darken($global-section-border-color, 5%);
 
   .as-calendar-occurrence.preview {
     opacity: .7;
