--- a/app/templates/components/as-calendar/timetable/occurrence.hbs
+++ b/app/templates/components/as-calendar/timetable/occurrence.hbs
@@ -1,4 +1,9 @@
 {{#unless isInteracting}}
-  <a {{action "delete" bubbles=false}} class="delete"></a>
-  <div class="resize-handle"></div>
+  {{#if isRemovable}}
+    <a {{action "remove" bubbles=false}} class="remove"></a>
+  {{/if}}
+
+  {{#if isResizable}}
+    <div class="resize-handle"></div>
+  {{/if}}
 {{/unless}}
