--- a/app/styles/addons/ember-calendar/components/as-calendar/_header.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/_header.scss
@@ -2,7 +2,7 @@
   @extend %grid-row;
 
   background-color: $ghost;
-  border: 1px solid $global-section-border-color;
+  border-bottom: 1px solid darken($global-section-border-color, 5%);
 
   nav,
   h1 {
