--- a/app/templates/components/as-calendar/time-zone-select.hbs
+++ b/app/templates/components/as-calendar/time-zone-select.hbs
@@ -6,7 +6,7 @@
 
   {{#rl-dropdown closeOnChildClick=".results"}}
     {{#liquid-if showResults use="crossFade" containerless=true}}
-      {{#if searchEnabled}}
+      {{#if showSearch}}
         <div class="search">
           <div class="icon"><i></i></div>
 
