Allow customization of the whole template

--- a/app/templates/components/as-calendar/occurrence.hbs
+++ b/app/templates/components/as-calendar/occurrence.hbs
@@ -1,9 +1,11 @@
 <div>
-  <h1 style={{titleStyle}}>{{title}}</h1>
+  {{#if hasBlock}}
+    {{yield}}
+  {{else}}
+    <h1 style={{titleStyle}}>{{title}}</h1>
+  {{/if}}
 
   {{#if occurrenceTemplateName}}
     {{partial occurrenceTemplateName}}
-  {{else}}
-    {{yield}}
   {{/if}}
 </div>
