--- a/app/styles/addons/ember-calendar/components/as-calendar/_time-zone-option.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/_time-zone-option.scss
@@ -1,5 +1,5 @@
 .as-calendar-time-zone-option {
-  color: $body-font-color;
+  color: color(text);
   font-weight: $font-weight-normal;
 
   &.selected {
