--- a/app/styles/addons/ember-calendar/components/as-calendar/_header.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/_header.scss
@@ -1,8 +1,8 @@
 .as-calendar-header {
   @extend %grid-row;
 
-  background-color: $ghost;
-  border-bottom: 1px solid darken($global-section-border-color, 5%);
+  background-color: color(border, light);
+  border-bottom: 1px solid color(border, dark);
 
   nav,
   h1 {
@@ -32,7 +32,7 @@
 
     .current-week {
       &:disabled {
-        color: $global-section-border-color;
+        color: color(border);
       }
     }
 
