Add missing parenthesis

--- a/app/styles/addons/ember-calendar/components/as-calendar/_occurrence.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/_occurrence.scss
@@ -1,5 +1,5 @@
 .as-calendar-occurrence {
-  background-color: rgba(color(alert, .8);
+  background-color: rgba(color(alert), .8);
   border-left: 2px solid color(alert, dark);
   color: color(white);
   left: 0;
