Replace rem-calc with rem

--- a/app/styles/addons/ember-calendar/components/as-calendar/timetable/_occurrence.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/timetable/_occurrence.scss
@@ -2,7 +2,7 @@
   .resize-handle {
     bottom: 0;
     cursor: ns-resize;
-    height: rem-calc(8);
+    height: rem(8);
     left: 0;
     position: absolute;
     right: 0;
