Update styles for paint 0.9.x

--- a/app/styles/addons/ember-calendar/components/as-calendar/_header.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/_header.scss
@@ -2,7 +2,7 @@
   @extend %grid-row-gutter;
 
   background-color: color(border, light);
-  border-bottom: 1px solid color(border, dark);
+  border-bottom: 1px solid color(gray, gainsboro);
 
   nav,
   h1 {
