--- a/app/styles/addons/ember-calendar/components/as-calendar/_time-zone-select.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/_time-zone-select.scss
@@ -11,6 +11,8 @@
     background-color: transparent;
     border: 0;
     margin: 0;
+    font-size: $base-font-size;
+    padding: 0;
 
     &:hover {
       color: color(link);
