--- a/app/styles/addons/ember-calendar/components/as-calendar/_occurrence.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/_occurrence.scss
@@ -16,5 +16,6 @@
     color: color(white);
     font-size: .9rem;
     font-weight: $font-weight-extrabold;
+    text-shadow: 0 0 1px rgba(0, 0, 0, .25);
   }
 }
