--- a/app/templates/components/as-calendar/time-zone-select.hbs
+++ b/app/templates/components/as-calendar/time-zone-select.hbs
@@ -13,7 +13,7 @@
           {{input type="text"
             value=query
             click=onSearchClick
-            placeholder="Search for more timezones"}}
+            placeholder="Search for more.."}}
         </div>
       {{/if}}
 
@@ -25,6 +25,7 @@
                 option=option
                 select=this
                 selectedOption=selectedOption
+                tagName="a"
                 onSelect="selectOption"}}
             </li>
           {{/each}}
