Update main calendar component to closure actions

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -5,6 +5,6 @@
   dayStartingTime="7:00"
   dayEndingTime="22:00"
   timeSlotDuration="00:30"
-  onAddOccurrence="calendarAddOccurrence"
-  onUpdateOccurrence="calendarUpdateOccurrence"
-  onRemoveOccurrence="calendarRemoveOccurrence"}}
+  onAddOccurrence=(action "calendarAddOccurrence")
+  onUpdateOccurrence=(action "calendarUpdateOccurrence")
+  onRemoveOccurrence=(action "calendarRemoveOccurrence")}}
