Use closure actions for setting the timezone

--- a/app/templates/components/as-calendar.hbs
+++ b/app/templates/components/as-calendar.hbs
@@ -10,7 +10,7 @@
   timeSlotHeight=timeSlotHeight
   defaultTimeZoneQuery=defaultTimeZoneQuery
   onSelectTime="addOccurrence"
-  onChangeTimeZone="changeTimeZone" as |day timetable|}}
+  onChangeTimeZone=(action "changeTimeZone") as |day timetable|}}
   <ul class="occurrences">
     {{#each day.occurrences as |occurrence|}}
       <li>
