--- a/app/templates/components/as-calendar/timetable.hbs
+++ b/app/templates/components/as-calendar/timetable.hbs
@@ -5,7 +5,7 @@
       options=timeZoneOptions
       defaultQuery=defaultTimeZoneQuery
       showSearch=showTimeZoneSearch
-      onChangeValue="changeTimeZone"}}
+      onChangeTimeZone=(action this.attrs.onChangeTimeZone)}}
   </div>
 
   <div class="day-labels">
